create nuxt introduce post

--- a/_posts/2022-01-21-nuxt.md
+++ b/_posts/2022-01-21-nuxt.md
@@ -1,7 +1,51 @@
 ---
-title: Nuxt 란
+title: "[Nuxt.js] 란 무엇일까?"
 share: true
 ---
 
-IS Nuxt
-https://nuxtjs.org/
+Vue Application을 만들기 위한 Framework인 **Nuxt.js**에 대해 알아보기로하자.
+
+# 탄생
+2016년 10월 25일, **zeit.co** 의 개발팀은 서버사이드 렌더링 React 애플리케이션을 위한 프레임워크인 Next.js 프레임워크를 발표했습니다. 발표 몇 시간 뒤,
+Next.js처럼 서버사이드 렌더링 **Vue.js 애플리케이션**을 위한 프레임워크를 만들자는 생각이 들었고, 그렇게 **Nuxt.js** 가 탄생했습니다
+
+# Nuxt.js 소개
+[Nuxt.js 공식사이트](https://nuxtjs.org/) 
+
+
+>  Nuxt.js는 일반적인 Vue.js 어플리케이션을 만드는 프레임 워크입니다.
+
+>  클라이언트/서버 배포를 추상화 하는 동안의 UI rendering 입니다.
+
+>  Node.js 기반의 프로젝트 또는 기본 프로젝트 베이스로 사용할 수 있을 만큼 유연한 프레임워크
+
+>  nuxt generate 라고 부르는 배포 옵션을 제공하며, 이는 Vue.js 애플리케이션을 정적으로 생성 하는 옵션입니다. 이 옵션이 마이크로 서비스를 지향하는 웹 애플리케이션 개발의 다음 단계가 될 수 있다고 생각합니다.
+
+
+> Nuxt.js 프레임워크는 비동기 데이터, 미들웨어, 레이아웃 등과 같이 클라이언트 측과 서버 측 사이에서 개발하는데 도움되는 많은 기능을 제공합니다.
+
+# 동작 방식 
+아래 이미지 구조는 nuxt-link를 통해 네비게이트 될 때 동작방식을 보여줍니다.
+
+![](https://develop365.gitlab.io/nuxtjs-0.10.7-doc/ko/nuxt-schema.svg)
+
+
+# Nuxt.js에 대한 개인적인 생각
+기존에 Vuejs를 써보면서 비동기 데이터를 처리(Store,Axios)하기 위한 렌더링 시점에 대한 고민 등의 문제를 쉽게 해결 할 수 있다는 것에 대해서 큰 메리트를 느낀다.
+
+
+추가로 SSR지원 및 middleware 및 라우트들이 정적생성 등의 큰 장점이 있는것으로 보아 아직 본격적으로 사용해본건 아니지만, 
+
+
+큰 러닝커브 없이 생산성이 올라갈것으로 기대 합니다.
+
+
+
+
+
+
+# 인용 사이트
+
+Nuxt공식 사이트 : https://nuxtjs.org/
+
+Nuxt번역 사이트 : https://develop365.gitlab.io/nuxtjs-0.10.7-doc/ko/guide/
